--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "crud-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "clusterMod.ts",
+  "type": "module",
   "scripts": {
-		"start:dev": "ts-node-dev src/server.ts",
-		"start:multi": "ts-node src/cluster.ts",
-		"build": "tsc",
-		"start:prod": "node dist/server.js"
+    "start:dev": "npx nodemon",
+    "start:multi": "ts-node src/clusterMod.ts",
+    "build": "tsc",
+    "start:prod": "node dist/clusterMod.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Bohdan Rud",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -18,8 +19,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
-    "ts-node-dev": "^2.0.0",
+		"tsx": "^4.19.1",
     "typescript": "^5.6.2"
   }
 }
