--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "start:dev": "npx nodemon",
     "start:multi": "tsx ./src/cluster.ts",
+		"test": "jest",
     "build": "npx tsc",
     "prod:start": "node dist/index.js",
-		"prod:multi": "node dist/cluster.js"
+    "prod:multi": "node dist/cluster.js",
+    "start:prod": "mpx tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "Bohdan Rud",
@@ -19,9 +21,14 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   }
