--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,26 @@
 {
   "compilerOptions": {
-		"module":"NodeNext",
-		"moduleResolution": "NodeNext",
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"noImplicitAny": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"target":"ES2018",
-		"lib": ["ES6"],
-		"removeComments": true,
-		"sourceMap": true,
-		"allowJs": true,
-		"rootDir": "./src",
-		"outDir": "./dist",
-	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules"],
-	"lib": ["esnext"]
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2018",
+    "lib": ["ES6"],
+    "removeComments": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["src/*"]
+    }
+  },
+  "include": ["src/**/*.ts", "tests/**/*.ts", "test/userController.test.ts"],
+  "exclude": ["node_modules", "test"]
 }
