--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "clusterMod.ts",
-  "type": "module",
   "scripts": {
     "start:dev": "npx nodemon",
-    "start:multi": "tsx ./src/cluster.ts",
-		"test": "jest",
+    "start:multi": "ts-node-dev ./src/cluster.ts",
+    "test": "jest",
     "build": "npx tsc",
-    "prod:start": "node dist/index.js",
-    "prod:multi": "node dist/cluster.js",
-    "start:prod": "mpx tsc && node dist/index.js"
+    "one:prod": "node dist/index.js",
+    "multi:prod": "node dist/cluster.js",
+    "start:prod": "npx tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "Bohdan Rud",
@@ -27,9 +26,10 @@
     "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "tsx": "^4.19.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
 }
